--- a/scripts/Package.targets
+++ b/scripts/Package.targets
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <!-- Properties expected to be provided -->
+  <!-- Properties expected to be provided, unless these defaults are OK -->
   <PropertyGroup>
     <ProjectName Condition="$(ProjectName) == ''">unknown</ProjectName>
     <Version Condition="$(Version) == ''">1.0.0.0</Version>
+    <SevenZipDirectory Condition="$(SevenZipDirectory) == ''">Dependencies\7-zip</SevenZipDirectory>
+    <DeployExeDirectory Condition="$(DeployExeDirectory) == ''">.</DeployExeDirectory>
+    <DeployExe Condition="$(DeployExe) == ''">CM.Deploy.UI.exe</DeployExe>
     <PackageDirectory Condition="$(PackageDirectory) == ''">package</PackageDirectory>
-
-    <MSBuildCommunityTasksPath Condition="$(MSBuildCommunityTasksPash) == ''">Dependencies\msbuild-community-tasks</MSBuildCommunityTasksPath>
+    <SfxDirectory Condition="$(SfxDirectory) == ''">sfx</SfxDirectory>
   </PropertyGroup>
   
   <PropertyGroup>
@@ -15,9 +17,7 @@
     <PackageTargets>$(PackageTargets);CreateArchive</PackageTargets>
   </PropertyGroup>
 
-  <Import Project='$(MSBuildCommunityTasksPath)\MSBuild.Community.Tasks.Targets' />
-
-  <Target Name="CLeanPackageDirectory">
+  <Target Name="CleanPackageDirectory">
     <RemoveDir Directories="$(PackageDirectory)" />
   </Target>
   
@@ -26,14 +26,21 @@
   </Target>
   
   <Target Name="CreateArchive">
-    <PropertyGroup>
-      <ZipFileName>$(PackageDirectory)\$(ProjectName)-$(Version).zip</ZipFileName>
-    </PropertyGroup>
-
-    <CreateItem Include="$(PackageDirectory)\**\*.*">
-      <Output TaskParameter="Include" ItemName="PackageContents" />
-    </CreateItem>
+    <Copy SourceFiles="$(DeployExeDirectory)\$(DeployExe)" DestinationFolder="$(PackageDirectory)" />
+    <Copy SourceFiles="$(SevenZipDirectory)\7zS.sfx" DestinationFolder="$(SfxDirectory)" />
     
-    <Zip Files="@(PackageContents)" ZipFileName="$(ZipFileName)" WorkingDirectory="$(PackageDirectory)" />
+    <PropertyGroup>
+      <SevenZipConfig>
+        %3B!@Install@!UTF-8!
+        Title="Deploy $(ProjectName)"
+        RunProgram="$(PackageDirectory)\$(DeployExe)"
+        %3B!@InstallEnd@!
+      </SevenZipConfig>
+    </PropertyGroup>
+    
+    <Exec Command="$(SevenZipDirectory)\7z.exe a $(SfxDirectory)\package.7z $(PackageDirectory)" />
+    <WriteLinesToFile File="$(SfxDirectory)\config.txt" Lines="$(SevenZipConfig)" />
+    <Exec Command="copy /b 7zS.sfx + config.txt + package.7z $(ProjectName)-$(Version).exe" 
+          WorkingDirectory="$(SfxDirectory)" />
   </Target>
 </Project>
