Enhancing deploy form to load config files and show properties in a grid

--- a/CM.FunctionalTests/CM.FunctionalTests.csproj
+++ b/CM.FunctionalTests/CM.FunctionalTests.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Deploy.UI\FileSystemTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="scripts\PackageTest.cs" />
     <Compile Include="Using.cs" />
