--- a/CM.Deploy.UI/CM.Deploy.UI.csproj
+++ b/CM.Deploy.UI/CM.Deploy.UI.csproj
@@ -70,6 +70,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeployFormPresenter.cs" />
+    <Compile Include="FileSystem.cs" />
+    <Compile Include="IDeployView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
