--- a/CM.FunctionalTests/CM.FunctionalTests.csproj
+++ b/CM.FunctionalTests/CM.FunctionalTests.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Deploy.UI\FileSystemTest.cs" />
+    <Compile Include="Deploy.UI\ProcessRunnerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="scripts\PackageTest.cs" />
     <Compile Include="Using.cs" />
