Got the asynchronous updating of the log working.  Fixed the MSBuild command line and updated the Package.targets to reflect the assembly name change for the deployer GUI.

--- a/scripts/Package.targets
+++ b/scripts/Package.targets
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <DeployExe Condition="@(DeployExe) == ''" Include="CM.Deploy.UI.exe" />
+    <DeployExe Condition="@(DeployExe) == ''" Include="deployer.exe" />
   </ItemGroup>
   
   <PropertyGroup>
