--- a/scripts/CommonBuild.targets
+++ b/scripts/CommonBuild.targets
@@ -2,7 +2,7 @@
   <Import Project="$(CommonBuildDirectory)/Default.Targets" />
   <Import Project="$(CommonBuildDirectory)/Master.Targets" />
   <Import Project="$(CommonBuildDirectory)/Subversion.Targets" />
-  <Import Project="$(CommonBuildDirectory)/Package.Targets" />
+  <Import Project="$(CommonBuildDirectory)/Sfx.Targets" />
 
   <Import Project="$(CommonBuildDirectory)/MSBuild.Community.Tasks.Targets" />
   <Import Project="$(CommonBuildDirectory)/Microsoft.Sdc.Common.Tasks" />
