--- a/scripts/DotNet.targets
+++ b/scripts/DotNet.targets
@@ -1,20 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <!-- Properties expected to be provided, unless these defaults are OK -->
+  <PropertyGroup>
+    <Solution Condition="$(Solution) == ''"></Solution>
+    <UnitTestProject Condition="$(UnitTestProject) == ''"></UnitTestProject>
+    <FunctionalTestProject Condition="$(FunctionalTestProject) == ''"></FunctionalTestProject>
+    
+    <Configuration Condition="$(Configuration) == ''">Release</Configuration>
+    <Version Condition="$(Version) == ''">0.0.0.0</Version>
+    <NUnitDirectory Condition="$(NUnitDirectory) == ''">$(MSBuildProjectDirectory)\Dependencies\nunit</NUnitDirectory>
+    <MSBuildCommunityTasksPath Condition="$(MSBuildCommunityTasksPath) == ''">$(MSBuildProjectDirectory)\Dependencies\CM.NET</MSBuildCommunityTasksPath>
+  </PropertyGroup>
+  
   <PropertyGroup>
     <CleanTargets>$(CleanTargets);CleanVisualStudioDirectories</CleanTargets>
-    <PreCompileTargets>$(PreCompileTargets);SetAssemblyInfo</PreCompileTargets>
+    <PreCompileTargets>$(PreCompileTargets);WriteVersionToAssemblyInfos</PreCompileTargets>
     <CompileTargets>$(CompileTargets);CompileSolution</CompileTargets>
-    <PostCompileTargets>$(PostCompileTargets);ResetAssemblyInfo</PostCompileTargets>
+    <PostCompileTargets>$(PostCompileTargets);RestoreAssemblyInfos</PostCompileTargets>
     <UnitTestTargets>$(UnitTestTargets);RunUnitTests</UnitTestTargets>
     <FunctionalTestTargets>$(UnitTestTargets);RunFunctionalTests</FunctionalTestTargets>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <AssemblyAttributes>
-      <AssemblyVersion Value="$(BUILD_NUMBER)" />
-      <AssemblyFileVersion Value="$(BUILD_NUMBER)" />
-    </AssemblyAttributes>
-  </PropertyGroup>
+  <UsingTask AssemblyFile="$(MSBuildCommunityTasksPath)\MSBuild.Community.Tasks.dll" TaskName="MSBuild.Community.Tasks.FileUpdate" />
+  
+  <ItemGroup>
+    <AssemblyInfoFiles Include="**\AssemblyInfo.cs" />
+  </ItemGroup>
 
   <Target Name="CleanVisualStudioDirectories">
     <CreateItem Include="**\bin\$(Configuration)\**\*">
@@ -27,40 +38,36 @@
   </Target>
 
   <Target Name="CompileSolution" DependsOnTargets="CleanVisualStudioDirectories">
-    <MSBuild Projects="$(Solution)" Targets="Rebuild" Properties="Configuration=$(Configuration)">
-      <Output TaskParameter="TargetOutputs" ItemName="Artifacts" />
-    </MSBuild>
+    <MSBuild Projects="$(Solution)" Targets="Rebuild" Properties="Configuration=$(Configuration)" />
   </Target>
 
-  <Target Name="SetAssemblyInfo">
-    <ItemGroup>
-      <AssemblyInfoFiles Include="**/AssemblyInfo.cs" />
-    </ItemGroup>
-
+  <Target Name="WriteVersionToAssemblyInfos">
     <Copy SourceFiles="@(AssemblyInfoFiles)"
-      DestinationFiles="%(FullPath).orig"
-      Condition="@(AssemblyInfoFiles) != '' And $(BUILD_NUMER) != ''" />
-    <SetAssemblyAttributes Files="@(AssemblyInfoFiles)"
-      Attributes="$(AssemblyAttributes)"
-      Condition="@(AssemblyInfoFiles) != '' And $(BUILD_NUMBER) != ''" />
+      DestinationFiles="%(AssemblyInfoFiles.FullPath).bak"
+      Condition="@(AssemblyInfoFiles) != ''" />
+    <FileUpdate Files="@(AssemblyInfoFiles)"
+      Regex="\[assembly: Assembly(File)?Version\(&quot;[\d\.\*]+&quot;\)\]"
+      ReplacementText="[assembly: Assembly$1Version(&quot;$(Version)&quot;)]" 
+      Condition="@(AssemblyInfoFiles) != ''" />
   </Target>
 
-  <Target Name="ResetAssemblyInfo" DependsOnTargets="SetAssemblyInfo">
-    <Copy SourceFiles="%(FullPath).orig"
+  <Target Name="RestoreAssemblyInfos" DependsOnTargets="WriteVersionToAssemblyInfos">
+    <Copy SourceFiles="%(AssemblyInfoFiles.FullPath).bak"
       DestinationFiles="@(AssemblyInfoFiles)"
-      Condition="@(AssemblyInfoFiles) != '' and Exists('%(FullPath).orig')" />
-    <Delete Files="%(FullPath).orig" Condition="@(AssemblyInfoFiles) != '' and Exists('%(FullPath).orig')" />
+      Condition="@(AssemblyInfoFiles) != '' and Exists('%(AssemblyInfoFiles.FullPath).bak')" />
+    <Delete Files="%(AssemblyInfoFiles.FullPath).bak" 
+      Condition="@(AssemblyInfoFiles) != '' and Exists('%(AssemblyInfoFiles.FullPath).bak')" />
   </Target>
 
   <Target Name="RunUnitTests" DependsOnTargets="CompileSolution">
     <NUnit Assemblies="$(MSBuildProjectDirectory)\$(UnitTestProject)\bin\$(Configuration)\$(UnitTestProject).dll"
-      ToolPath="References\nunit"
+      ToolPath="$(NUnitDirectory)"
       Condition="$(UnitTestProject) != ''" />
   </Target>
 
   <Target Name="RunFunctionalTests" DependsOnTargets="CompileSolution">
     <NUnit Assemblies="$(MSBuildProjectDirectory)\$(FunctionalTestProject)\bin\$(Configuration)\$(FunctionalTestProject).dll"
-      ToolPath="References\nunit"
+      ToolPath="$(NUnitDirectory)"
       Condition="$(FunctionalTestProject) != ''" />
   </Target>
 </Project>
