Removed the import of MSBuild Community Tasks and Sdc.Tasks from CommonBuild.targets - it caused a problem in CI and maybe shouldn't be there anyhow.  Removed sfx.targets from CommonBuild.targets sinces that definitely shouldn't be there.  It should only be included by deployable applications, not by libraries.

--- a/scripts/DotNet.targets
+++ b/scripts/DotNet.targets
@@ -22,6 +22,7 @@
   </PropertyGroup>
 
   <UsingTask AssemblyFile="$(MSBuildCommunityTasksPath)\MSBuild.Community.Tasks.dll" TaskName="MSBuild.Community.Tasks.FileUpdate" />
+  <UsingTask AssemblyFile="$(MSBuildCommunityTasksPath)\MSBuild.Community.Tasks.dll" TaskName="MSBuild.Community.Tasks.NUnit" />
   
   <ItemGroup>
     <AssemblyInfoFiles Include="**\AssemblyInfo.cs" />
