Renamed Master.targets to MasterWorkflow.targets to make it more obvious that it defines the workflow

--- a/CM.FunctionalTests/CM.FunctionalTests.csproj
+++ b/CM.FunctionalTests/CM.FunctionalTests.csproj
@@ -69,8 +69,8 @@
       <Link>scripts\Dependencies\msbuild-community-tasks\MSBuild.Community.Tasks.xsd</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="..\scripts\Master.targets">
-      <Link>scripts\Master.targets</Link>
+    <None Include="..\scripts\MasterWorkflow.targets">
+      <Link>scripts\MasterWorkflow.targets</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="..\scripts\Sfx.targets">
