--- a/scripts/TeamCity.targets
+++ b/scripts/TeamCity.targets
@@ -7,6 +7,7 @@
 
   <PropertyGroup>
     <PreCleanTargets>$(PreCleanTargets);InitializeDefaultProperties</PreCleanTargets>
+    <TraceDataTargets>$(TraceDataTargets);TraceTeamCityData</TraceDataTargets>
   </PropertyGroup>
 
   <UsingTask TaskName="StringReplace" AssemblyFile="$(SdcTasksDirectory)\Microsoft.Sdc.Tasks.dll" />
@@ -28,5 +29,23 @@
     <CreateProperty Value="$(ProjectName)-$(Version)" Condition="$(PackageName) == ''">
       <Output TaskParameter="Value" PropertyName="PackageName" />
     </CreateProperty>
+  </Target>
+
+  <Target Name="TraceTeamCityData">
+    <Message Text="TeamCity.targets" />
+    <Message Text="  Version: $(Version)" />
+    <Message Text="  SdcTasksDirectory: $(SdcTasksDirectory)" />
+    
+    <!-- Dynamic properties -->
+    <Message Text="  ProjectName: $(ProjectName)" Condition="$(ProjectName) != ''" />
+    <Message Text="  ProjectName won't be initialized until the Clean target is run" Condition="$(ProjectName) == ''" />
+    <Message Text="  Solution: $(Solution)" Condition="$(Solution) != ''" />
+    <Message Text="  Solution won't be initialized until the Clean target is run" Condition="$(Solution) == ''" />
+    <Message Text="  UnitTestProject: $(UnitTestProject)" Condition="$(UnitTestProject) != ''" />
+    <Message Text="  UnitTestProject won't be initialized until the Clean target is run" Condition="$(UnitTestProject) == ''" />
+    <Message Text="  FunctionalTestProject: $(FunctionalTestProject)" Condition="$(FunctionalTestProject) != ''" />
+    <Message Text="  FunctionalTestProject won't be initialized until the Clean target is run" Condition="$(FunctionalTestProject) == ''" />
+    <Message Text="  PackageName: $(PackageName)" Condition="$(PackageName) != ''" />
+    <Message Text="  PackageName won't be initialized until the Clean target is run" Condition="$(PackageName) == ''" />
   </Target>
 </Project>
